fix matchprofile tests